--- a/src/configurations.json
+++ b/src/configurations.json
@@ -2,7 +2,7 @@
   "backgroundType": "plain",
   "plainBackgroundMode": "daylight",
   "devIntro": "Hi,I'm Coder Dave",
-  "devDesc": "Frontend Dev | ReactJs| Html5 | Css3 | Nodejs | Bootstrap 4 | Php  | Email Dev",
+  "devDesc": "Frontend Dev | ReactJs| Html5 | Css3 | Nodejs | Bootstrap 4 | Php",
   "gradientColors": "#EE7752, #E73C7E, #23A6D5, #23D5AB",
   "linkIntro": "Press Links Below",
   "backgroundImageUrl": "http://hdwpro.com/wp-content/uploads/2017/03/Art-Background-Image.png",
